added more context for ipynb, resolve, modify config readme, resolve PR comments

--- a/dataset/facility-synth/eval.ipynb
+++ b/dataset/facility-synth/eval.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d845f3ea",
+   "metadata": {},
+   "source": [
+    "# Facility Synthetic Dataset Evaluation\n",
+    "\n",
+    "This notebook provides a comprehensive evaluation framework for testing and benchmarking LLM performance on the facility management synthetic dataset. It focuses on assessing how well language models can extract structured information from customer service messages in the facility management domain."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "39089a7a-5d24-4b41-bf54-99805bec1951",
