“Add-open-ended-close-ended-judge-template“

--- a/notebook/pdo_tutorial_final.ipynb
+++ b/notebook/pdo_tutorial_final.ipynb
@@ -156,7 +156,7 @@
     "5. **Multi-Ranker System**: Aggregates multiple ranking algorithms for robust evaluation\n",
     "6. **Instruction Evolution**: Generates new prompts by combining successful variants\n",
     "\n",
-    "Let's explore each component in detail.\n"
+    "Let's explore each component in detail. \n"
    ]
   },
   {
@@ -512,6 +512,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Support both close-ended and open-ended task"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For close-ended (classification) tasks, set `optimization.task_type` to `close_ended` in your configuration, and specify `optimization.answer_choices` (such as `[\"Yes\", \"No\"]`), though this defaults to yes/no if omitted. In this mode, the model returns its answer as a JSON object that includes both reasoning and the chosen answer, and judging uses a fixed rubric—evaluating both correctness and reasoning quality.\n",
+    "```yaml\n",
+    "optimization:\n",
+    "  strategy: \"pdo\"\n",
+    "  task_type: close_ended\n",
+    "  answer_choices: [\"Yes\", \"No\"]\n",
+    "```\n",
+    "\n",
+    "For open-ended tasks (meaning any task that isn’t simple classification), set `optimization.task_type` to `open_ended` in your configuration. You can also provide a custom evaluation rubric by specifying `optimization.judge_requirement`. If you omit this, PDO will automatically generate appropriate judging criteria based on your dataset summary and sample questions. In open-ended mode, the model generates free-form answers, and the judge selects the better response using either your custom rubric or the automatically generated one, providing both an explanation and a winner. For example, if you are working on a summarization task, your YAML might look like this with a specific customized requirement:\n",
+    "```yaml\n",
+    "optimization:\n",
+    "  strategy: \"pdo\"\n",
+    "  task_type: open_ended\n",
+    "  judge_requirement: |\n",
+    "    - Key points coverage (40%): Captures major decisions, actions, owners, dates.\n",
+    "    - Faithfulness (30%): No invented details or attributions.\n",
+    "    - Structure (15%): Logical, grouped bullets or sections.\n",
+    "    - Brevity & clarity (10%): Minimal fluff; readable.\n",
+    "    - Tie-Breaker (5%): Better prioritization of actionable items.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Dataset Preparation\n",
     "\n",
     "According to the paper, PDO works effectively with:\n",
@@ -525,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,9 +581,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial Prompt Template:\n",
+      "==================================================\n",
+      "\n",
+      "You are a customer support message classifier.\n",
+      "\n",
+      "Analyze the customer message and classify it according to:\n",
+      "- Urgency: low, medium, high, or critical\n",
+      "- Sentiment: positive, neutral, or negative\n",
+      "- Category: account_access, billing, technical_issue, feedback, or general_inquiry\n",
+      "- Escalation needed: true or false\n",
+      "\n",
+      "Return your classification as a JSON object with these exact fields:\n",
+      "{\n",
+      "  \"urgency\": \"<urgency_level>\",\n",
+      "  \"sentiment\": \"<sentiment>\",\n",
+      "  \"category\": \"<category>\",\n",
+      "  \"requires_escalation\": <boolean>\n",
+      "}\n",
+      "\n",
+      "\n",
+      "==================================================\n",
+      "\n",
+      "What PDO Will Optimize:\n",
+      "• Clarity of classification criteria\n",
+      "• Examples of edge cases (e.g., 'What makes something critical?')\n",
+      "• Ordering and emphasis of instructions\n",
+      "• Additional guidance for ambiguous cases\n",
+      "\n",
+      "Evolution Process:\n",
+      "1. PDO tests this prompt against others in duels\n",
+      "2. Identifies where it wins/loses\n",
+      "3. Generates improved variants\n",
+      "4. New variants compete in subsequent rounds\n",
+      "5. Best performers naturally emerge through competition\n"
+     ]
+    }
+   ],
    "source": [
     "# Example initial prompt (prompts/prompt.txt)\n",
     "initial_prompt = \"\"\"\n",
@@ -627,6 +701,13 @@
    "outputs": [],
    "source": [
     "# TODO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n"
    ]
   },
   {
@@ -793,7 +874,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sap-prompt-opt",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -807,7 +888,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.21"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
