refactor: rename llama_prompt_ops to prompt_ops and improve module structure
- Updated references from `llama_prompt_ops` to `prompt_ops` across various files for consistency.
- Refactored coverage configuration to reflect the new source path.
- Introduced a new core module to centralize prompt-ops import logic and availability checks.
- Enhanced dataset analysis and error handling in dataset routes for better clarity.
- Improved logging practices throughout the backend for more informative output.
- Updated README and requirements to reflect the new package structure and installation instructions.

--- a/notebook/pdo_tutorial_101.ipynb
+++ b/notebook/pdo_tutorial_101.ipynb
@@ -540,7 +540,7 @@
     "  system: \"prompts/prompt.txt\"                                  # Initial prompt file\n",
     "\n",
     "metric:\n",
-    "  class: \"llama_prompt_ops.core.metrics.LLMJudgeStandardMetric\"\n",
+    "  class: \"prompt_ops.core.metrics.LLMJudgeStandardMetric\"\n",
     "```\n",
     "\n",
     "---\n",
